# coding-the-coding-agents

./: README.md  Speicher  pyproject.toml
agent_w_mcp/: agent_w_mcp.ipynb  agent_w_mcp.py  demo_token.txt  notoops.html  oops.html  poisoned_bash_tool.py  regular.html  rug_pull_bash_tool.py  server.json  server.py  server_poisoned.json  server_rug_pull.json  server_shadowed.json  shadowed_fact_of_the_day_tool.py
baseline/: baseline.ipynb
basic_agent/: agents.ipynb
multi_agent/: multi-agent-swarm.py  multi-agent.py  multi_agent.ipynb  multi_agent_supervisor.ipynb  multi_agent_swarm.ipynb
multi_agent_a2a/: README.md  mutli-agent-a2a.py
