[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agents"
version = "0.0.0"
description = "Demo for the talk about AI-agents"
authors = [
    "Alex Shershebnev <alexs@forgood.ai>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

anthropic = "^0.47.0"
beautifulsoup4 = "^4.13.3"
googlesearch-python = "^1.3.0"
langchain = "^0.3.27"
langchain_anthropic = "^0.3.8"
langchain_community = "^0.3.29"
langchain-experimental = "^0.3.4"
langchain-mcp-adapters = "^0.0.2"
langgraph = "^0.6.6"
langgraph-api = "^0.4.9"
langgraph-cli = {version = "^0.4.0", extras = ["inmem"]}
langgraph-prebuilt = "^0.6.4"
langgraph-supervisor = "^0.0.29"
langgraph-swarm = "^0.0.14"
lxml = "5.3.1"
mcp = "^1.3.0"
mcp-server-fetch = "^2025.1.17"
notebook = "^7.4.0"
openai = "^1.65.0"
playwright = "^1.5.5"
pydantic = "^2.11.7"
python-a2a = "^0.5.9"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
